<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GameDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_ll">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/game_detail_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/god_of_war"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/garis_bawah_image"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#A7A7A7"
                app:layout_constraintTop_toBottomOf="@id/game_detail_image"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_judul_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/garis_bawah_image"
                android:text="@string/judul_game"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/tv_description_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_judul_game"
                android:text="@string/deskripsi_game"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_publisher_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_description_game"
                android:text="@string/publisher_drunken"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15sp"/>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_publisher_game"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:numStars="5"
                android:rating="4.5"
                android:isIndicator="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/share_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/like_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/like"
            android:layout_margin="4dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>